fix styles in dark mode

--- a/Components/MainPage/Opinions/Opinions.module.css
+++ b/Components/MainPage/Opinions/Opinions.module.css
@@ -1,6 +1,6 @@
 .slider {
     width: 100vw;
-    margin: 7rem auto;
+    padding: 7rem auto;
     background-color: #fff;
   }
   .opinions__slider__content {
