--- a/pages/offert.module.css
+++ b/pages/offert.module.css
@@ -1,7 +1,6 @@
 .offert{
     width: 100vw;
     background-color: #fff;
-    color: #000;
 }
 .offert__content{
     display: flex;
